--- a/NiceShip/NiceShip.vcxproj
+++ b/NiceShip/NiceShip.vcxproj
@@ -28,6 +28,7 @@
     <ClInclude Include="Port.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="SmallFish.h" />
     <ClInclude Include="Special.h" />
     <ClInclude Include="Title.h" />
@@ -42,6 +43,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Port.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="SmallFish.cpp" />
     <ClCompile Include="Special.cpp" />
     <ClCompile Include="Title.cpp" />
